--- a/Course 1/Week2/Numpy Basic/Python+Basics+With+Numpy+v3.ipynb
+++ b/Course 1/Week2/Numpy Basic/Python+Basics+With+Numpy+v3.ipynb
@@ -38,10 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### START CODE HERE ### (≈ 1 line of code)\n",
@@ -51,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -104,21 +100,20 @@
     "**Reminder**:\n",
     "$sigmoid(x) = \\frac{1}{1+e^{-x}}$ is sometimes also known as the logistic function. It is a non-linear function used not only in Machine Learning (Logistic Regression), but also in Deep Learning.\n",
     "\n",
-    "<img src=\"images/Sigmoid.png\" style=\"width:500px;height:228px;\">\n",
+    "<img src=\"Sigmoid.png\" style=\"width:500px;height:228px;\">\n",
     "\n",
     "To refer to a function belonging to a specific package you could call it using package_name.function(). Run the code below to see an example with math.exp()."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: basic_sigmoid\n",
     "\n",
+    "import numpy\n",
     "import math\n",
     "\n",
     "def basic_sigmoid(x):\n",
@@ -141,10 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -152,7 +145,7 @@
        "0.9525741268224334"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,24 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "bad operand type for unary -: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-2e11097d6860>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mbasic_sigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# you will see this give an error when you run it, because x is a vector.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-0bf050bfab2c>\u001b[0m in \u001b[0;36mbasic_sigmoid\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m### START CODE HERE ### (≈ 1 line of code)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m### END CODE HERE ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: bad operand type for unary -: 'list'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\n",
     "x = [1, 2, 3]\n",
@@ -217,19 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  2.71828183   7.3890561   20.08553692]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -247,19 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 5 6]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# example of vector operation\n",
     "x = np.array([1, 2, 3])\n",
@@ -292,10 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: sigmoid\n",
@@ -322,22 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.73105858,  0.88079708,  0.95257413])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "sigmoid(x)"
@@ -372,10 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: sigmoid_derivative\n",
@@ -402,19 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sigmoid_derivative(x) = [ 0.19661193  0.10499359  0.04517666]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "print (\"sigmoid_derivative(x) = \" + str(sigmoid_derivative(x)))"
@@ -459,10 +390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: image2vector\n",
@@ -484,27 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "image2vector(image) = [[ 0.67826139  0.29380381]\n",
-      " [ 0.90714982  0.52835647]\n",
-      " [ 0.4215251   0.45017551]\n",
-      " [ 0.92814219  0.96677647]\n",
-      " [ 0.85304703  0.52351845]\n",
-      " [ 0.19981397  0.27417313]\n",
-      " [ 0.60659855  0.00533165]\n",
-      " [ 0.10820313  0.49978937]\n",
-      " [ 0.34144279  0.94630077]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# This is a 3 by 3 by 2 array, typically images will be (num_px_x, num_px_y,3) where 3 represents the RGB values\n",
     "image = np.array([[[ 0.67826139,  0.29380381],\n",
@@ -582,10 +493,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: normalizeRows\n",
@@ -614,20 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "normalizeRows(x) = [[ 0.          0.6         0.8       ]\n",
-      " [ 0.13736056  0.82416338  0.54944226]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = np.array([\n",
     "    [0, 3, 4],\n",
@@ -708,10 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: softmax\n",
@@ -745,22 +641,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "softmax(x) = [[  9.80897665e-01   8.94462891e-04   1.79657674e-02   1.21052389e-04\n",
-      "    1.21052389e-04]\n",
-      " [  8.78679856e-01   1.18916387e-01   8.01252314e-04   8.01252314e-04\n",
-      "    8.01252314e-04]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = np.array([\n",
     "    [9, 2, 5, 0, 0],\n",
@@ -829,17 +712,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " ----- Computation time = 0.1743690000002296ms\n",
+      " ----- Computation time = 0.13298199999978166ms\n",
       "outer = [[ 81.  18.  18.  81.   0.  81.  18.  45.   0.   0.  81.  18.  45.   0.\n",
       "    0.]\n",
       " [ 18.   4.   4.  18.   0.  18.   4.  10.   0.   0.  18.   4.  10.   0.\n",
@@ -870,11 +751,11 @@
       "    0.]\n",
       " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
       "    0.]]\n",
-      " ----- Computation time = 0.36148100000010785ms\n",
+      " ----- Computation time = 0.3756010000000032ms\n",
       "elementwise multiplication = [ 81.   4.  10.   0.   0.  63.  10.   0.   0.   0.  81.   4.  25.   0.   0.]\n",
-      " ----- Computation time = 0.1924500000001217ms\n",
-      "gdot = [ 24.39422826  29.36811235  17.64309874]\n",
-      " ----- Computation time = 0.24551299999986398ms\n"
+      " ----- Computation time = 0.36499199999973087ms\n",
+      "gdot = [ 23.35483246  20.26892571  22.30224275]\n",
+      " ----- Computation time = 0.26857200000041104ms\n"
      ]
     }
    ],
@@ -922,17 +803,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " ----- Computation time = 0.14842000000037103ms\n",
+      " ----- Computation time = 0.07703300000017066ms\n",
       "outer = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
       " [18  4  4 18  0 18  4 10  0  0 18  4 10  0  0]\n",
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
@@ -948,15 +827,16 @@
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
-      " ----- Computation time = 0.14320500000009062ms\n",
+      " ----- Computation time = 0.09613599999980238ms\n",
       "elementwise multiplication = [81  4 10  0  0 63 10  0  0  0 81  4 25  0  0]\n",
-      " ----- Computation time = 0.10626299999971778ms\n",
-      "gdot = [ 24.39422826  29.36811235  17.64309874]\n",
-      " ----- Computation time = 0.13664600000007354ms\n"
+      " ----- Computation time = 0.06480300000033523ms\n",
+      "gdot = [ 23.35483246  20.26892571  22.30224275]\n",
+      " ----- Computation time = 0.24802199999962582ms\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "x1 = [9, 2, 5, 0, 0, 7, 5, 0, 0, 0, 9, 2, 5, 0, 0]\n",
     "x2 = [9, 2, 2, 9, 0, 9, 2, 5, 0, 0, 9, 2, 5, 0, 0]\n",
     "\n",
@@ -1010,10 +890,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L1\n",
@@ -1037,10 +915,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1082,10 +958,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L2\n",
@@ -1109,10 +983,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1181,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
